# MediaTracker

./: README.md  flake.nix  index.html  package-lock.json  package.json  vite.config.ts
nix/: media-tracker.nix
src/: App.vue  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.reuse-vite.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hardcover.rs  lib.rs  modrinth.rs  onedrive.rs
src/components/: BaseButton.vue  BaseButtonBack.vue  BaseButtonDelete.vue  BaseButtonSave.vue  BaseCheckbox.vue  BaseSelect.vue  BaseTextArea.vue  BaseTextInput.vue  BaseTextList.vue  FeatureAssets.vue  FeatureCard.vue  FeatureCards.vue  FeatureCoverImage.vue  FeatureDatabase.vue  FeatureFilter.vue  FeatureGallery.vue  FeatureOngoing.vue  FeatureProgress.vue  FeatureProgressBar.vue  FeatureSync.vue  FeatureTags.vue  FeatureType.vue  FeatureWindowBar.vue  PageDetails.vue  PageGraph.vue  PageHome.vue  PageKeys.vue  PageLibrary.vue  PageSearch.vue  PageSettings.vue  PageSplash.vue  PageSync.vue
src/composables/: useApiCalls.ts  useCustomTags.ts  useDatabaseSync.ts  useFieldModel.ts  useFileUpload.ts  useImageLoader.ts  useItemFiltering.ts  useItemForm.ts  useItemNavigation.ts  useItemOperations.ts  useLocalStorage.ts  useNewItemDefaults.ts  useSelectOptions.ts  useStatusColors.ts  useTypeColors.ts
src/router/: index.ts
src/utils/: types.ts
